--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -1,8 +1,6 @@
 name: Deploy GreenSitter to heroku
 
-on:
-  push:
-    branches: [ master ]
+on: push
 
 jobs:
   build-frontend:
@@ -53,7 +51,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-backend
     steps:
+      - name: Remove target folder
       - uses: actions/checkout@v2
+        - run: rm -rf backend/target
       - name: create target folder
         run: mkdir backend/target
       - name: download green-sitter.jar
