--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "fontsource-roboto": "^2.1.4",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@material-ui/styles": "^4.10.0",
     "cross-fetch": "^3.0.5"
   }
 }
