--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.1.1"
   },
   "scripts": {
@@ -42,6 +42,6 @@
   },
   "devDependencies": {
     "@material-ui/styles": "^4.11.4",
-    "cross-fetch": "^3.0.5"
+    "cross-fetch": "^3.1.4"
   }
 }
